# devticket-explorer

./: .gitignore  CLAUDE.md  publish-kit.yaml  pubspec.yaml
.github/workflows/: android-build-deploy.yml  combined-build-deploy.yml  ios-build-deploy.yml
android/app/: build.gradle  proguard-rules.pro
devticket_api/: Cargo.toml
devticket_api/src/: db.rs  geo.rs  handlers.rs  main.rs  models.rs
devticket_app/: README.md  pubspec.yaml
devticket_app/android/app/: build.gradle
devticket_app/ios/Runner/: Info.plist
devticket_app/ios/Runner.xcodeproj/: project.pbxproj
devticket_app/lib/config/: app_config.dart  theme.dart
devticket_app/lib/models/: destination.dart  route_detail.dart
devticket_app/linux/: CMakeLists.txt  my_application.cc
devticket_app/test/: widget_test.dart
devticket_app/web/: index.html
devticket_app/windows/: CMakeLists.txt
fastlane/: Appfile  Fastfile  Gemfile  Matchfile  Pluginfile
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: place.dart  route_detail.dart  station.dart  transport_line.dart
lib/providers/: providers.dart
lib/screens/: circular_route_detail_screen.dart  destination_detail_screen.dart  destinations_list_screen.dart  discover_screen.dart  home_screen.dart  place_detail_screen.dart  places_explorer_screen.dart  transport_lines_screen.dart
lib/services/: api_service.dart
lib/utils/: station_utils.dart
lib/widgets/: animated_vehicle.dart  attraction_card.dart  map_widget.dart  place_card.dart  rating_stars.dart  ring_route_card.dart
web/: manifest.json
(+20 files in other folders)
